# dspc

./: CMakeLists.txt  NOTES.asm.txt  README-DIFFEV.txt  README-REMEZ.txt  README.md  butterworth_lr.h  cpuinfo.h  crc32_hswarren.c  de_solve.c  de_strategy.c  de_strategy_helpers.h  dspc.h  dspc_misc.h  dumb_alloc2d.c  dumb_alloc2d.h  exception.cpp  exception.hh  fft.hh  ft_utils.c  funcname.h  gnuinline.h  iir_utils.c  iir_utils.h  jclient.c  mem.cpp  mem.hh  monotime.c  path-asm.sh  path_biquad_cpp.cpp  path_filtering_c.h  path_peq_zb_cpp.cpp  peakestim.h  perr.c  perr.h  remez.c  rng.c  sfio.cpp  sfio.hh  strip_path.c  strip_path.h  (+4 more)
dspc/: crc32_hswarren.h  cycle-fftw.h  de.h  de_rng_helpers.h  ft_utils.h  genfiltering_c_preproc.h  iir_c_preproc.h  iir_zb.h  jclient.h  path_biquad_cpp.hh  path_iir_cpp.hh  path_peq.h  path_peq_zb_cpp.hh  path_vec16_cintr.h  remez.h  rng.h  windows.hh
experimental/: overlap.ods  rb.cpp  rb.hh  t_ringbuffer.cpp
old/: cpuinfo.c  monotime.h
